--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
- 
+@media (max-width: 576px){
+    .fv-carousel-2 {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+ }
+ }
