--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,9 @@
 .searchInput::-ms-input-placeholder {
     background-color: transparent;
 }
+.cascad{
+    animation-name: fadeInOut, moveLeft300px, bounce;
+animation-duration: 2.5s, 5s;
+animation-iteration-count: 2, 1;
+
+}
